testcases/error/mismatch_function_arg.veryl
module mismatch_function_arg {
    let _a: u32 = $clog2(logic);
}
